Simplify search-options endpoint function
